intermediate revision -temporarily downgraded to JDK 11/ SBP 2.7.18