@@ -1,7 +1,7 @@
 package example.util;
 
-import jakarta.servlet.*;
-import jakarta.servlet.http.*;
+import javax.servlet.*;
+import javax.servlet.http.*;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
@@ -10,6 +10,7 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
 @Component
 public class JwtFilter extends OncePerRequestFilter {
 
@@ -33,7 +34,7 @@ public class JwtFilter extends OncePerRequestFilter {
 				String username = jwtUtil.getUsername(token);
 				List<String> roles = jwtUtil.getRoles(token);
 
-				var authorities = roles.stream().map(SimpleGrantedAuthority::new).toList();
+				var authorities = roles.stream().map(SimpleGrantedAuthority::new).collect(Collectors.toList());
 
 				var auth = new UsernamePasswordAuthenticationToken(username, null, authorities);
 
